--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             </ul>
         </nav>
 
-        <div class="contact-mail"> </div><a href="mailto:info@devstudio.com"
-            class="headr-contact link">info@devstudio.com</a></div>
+        <a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
         <div class="contact-tel"><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></div>
     </header>
     <!--Main-->
@@ -60,7 +59,7 @@
                             форматированию
                             позиции.</p>
                     </li>
-                    
+
                     <li class="about-items">
                         <h3 class="main-h3">Пунктуальность</h3>
                         <p class="main-paragraph">Задача организации, в особенности же рамки и место обучение кадров
@@ -96,30 +95,39 @@
             </div>
         </section>
         <section class="section">
-            <div class="container team">
+            <div class="container">
                 <h2 class="main-h2">Наша команда </h2>
                 <ul class="team-list">
                     <li class="team-items"><img src="images/foto_dem.jpg" width="270" height="260"
                             alt="Фото Игоря Демьяненко" />
-                        <div class="team-position"><p class="team-name">Игорь Демьяненко</p>
-                        <p class="position">Product Designer</p></div>
+                        <div class="team-position">
+                            <p class="team-name">Игорь Демьяненко</p>
+                            <p class="position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-items"><img src="images/foto_rep.jpg" width="270" height="260"
                             alt="Фото Ольги Репиной" />
-                        <div class="team-position"><p class="team-name">Ольга Репина </p>
-                        <p class="position">Fronted Developer</p></div>
+                        <div class="team-position">
+                            <p class="team-name">Ольга Репина </p>
+                            <p class="position">Fronted Developer</p>
+                        </div>
                     </li>
                     <li class="team-items"><img src="images/forto_tarasov.jpg" width="270" height="260"
                             alt="Фото Николая Тарасова" />
-                        <div class="team-position"><p class="team-name">Николай Тарасов </p>
-                        <p class="position">Marketing</p></div>
+                        <div class="team-position">
+                            <p class="team-name">Николай Тарасов </p>
+                            <p class="position">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-items"><img src="images/foto_ermak.jpg" width="270" height="260"
                             alt="Фото Михаила Ермакова" />
-                        <div class="team-position"><p class="team-name">Михаил Ермаков </p>
-                        <p class="position">Designer</p></div>
+                        <div class="team-position">
+                            <p class="team-name">Михаил Ермаков </p>
+                            <p class="position">Designer</p>
+                        </div>
                     </li>
                 </ul>
+            </div>
         </section>
     </main>
     <!--Footer-->
