--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
             </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
-        <div class="contact-tel"><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></div>
+        <div class="contact"><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="headr-contact link">+380961111111</a>
+        </div>
     </header>
     <!--Main-->
     <main>
-        <section class="section">
-            <div class="container main">
+        <section class="section  main">
+            <div class="container">
                 <h1 class="main-h1">Эффективное решение для вашего бизнеса</h1>
                 <button type="button" class="main-button">Заказать услугу</button>
             </div>
         </section>
-        <section class=section>
+        <section class="section">
             <div class="container about">
                 <ul class="about-list">
                     <li class="about-items">
@@ -81,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section img">
             <div class="container">
                 <h2 class="main-h2">Чем мы занимаемся</h2>
                 <ul class="pictures">
@@ -94,7 +95,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section img">
             <div class="container">
                 <h2 class="main-h2">Наша команда </h2>
                 <ul class="team-list">
@@ -131,16 +132,14 @@
         </section>
     </main>
     <!--Footer-->
-    <footer class="section">
-        <div class="container footer">
-            <div class="footer-logo"><a href="./index.html" class="logo-web link">Web<span
-                        class="logo-studio-footer link">Studio</span></a></div>
-            <div class="footer-address">
-                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+    <footer class="section footer">
+        <div class="container">
+            <a href="./index.html" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <div class="footer-contact"><a href="mailto:info@devstudio.com"
+                    class="footer-contact link">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="footer-contact link tel">+380961111111</a>
             </div>
-            <div class="footer-mail"><a href="mailto:info@devstudio.com"
-                    class="footer-contact link">info@devstudio.com</a></div>
-            <div class="footer-tel"><a href="tel:+380961111111" class="footer-contact link">+380961111111</a></div>
         </div>
     </footer>
 </body>
