--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 
 <body>
     <!--Header-->
-    <header class="container headr">
+    <header class="container headr line">
 
         <nav class="headr">
             <div class="headr-logo"><a href="./index.html" class="logo-web link">Web<span
@@ -39,8 +39,9 @@
             </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
-        <div class="contact-tel"><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></div>
+        <div class="contact"><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="headr-contact link">+380961111111</a>
+        </div>
     </header>
     <!--Main-->
     <main>
@@ -60,63 +61,63 @@
             </div>
             <div class="container pictures">
                 <ul class="portfolio-list">
-                    <li class="portfolio-items"><img src="images/img1.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img1.jpg" width="370" height="284"
                             alt="произвольная картинка 1" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Технокряк</h3>
                             <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img2.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img2.jpg" width="370" height="284"
                             alt="произвольная картинка 2" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Постер New Orlean vs Golden Star</h3>
                             <p class="main-portfolio-h3-paragraph">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img3.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img3.jpg" width="370" height="284"
                             alt="произвольная картинка 3" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Ресторан Seafood</h3>
                             <p class="main-portfolio-h3-paragraph">Приложения</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img4.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img4.jpg" width="370" height="284"
                             alt="произвольная картинка 4" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект Prime</h3>
                             <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img5.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img5.jpg" width="370" height="284"
                             alt="произвольная картинка 5" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект Boxes</h3>
                             <p class="main-portfolio-h3-paragraph">Приложения</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img6.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img6.jpg" width="370" height="284"
                             alt="произвольная картинка 6" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Inspiration has no Borders</h3>
                             <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img7.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img7.jpg" width="370" height="284"
                             alt="произвольная картинка 7" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Издание Limited Edition</h3>
                             <p class="main-portfolio-h3-paragraph">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img8.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img8.jpg" width="370" height="284"
                             alt="произвольная картинка 8" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект LAB</h3>
                             <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img9.jpg" width="360" height="284"
+                    <li class="portfolio-items"><img src="images/img9.jpg" width="370" height="284"
                             alt="произвольная картинка 9" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Growing Business</h3>
@@ -128,16 +129,14 @@
         </section>
     </main>
     <!--Footer-->
-    <footer class="section">
-        <div class="container footer">
-            <div class="footer-logo"><a href="./index.html" class="logo-web link">Web<span
-                        class="logo-studio-footer link">Studio</span></a></div>
-            <div class="footer-address">
-                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+    <footer class="section footer">
+        <div class="container">
+            <a href="./index.html" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            <div class="footer-contact"><a href="mailto:info@devstudio.com"
+                    class="footer-contact link">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="footer-contact link tel">+380961111111</a>
             </div>
-            <div class="footer-mail"><a href="mailto:info@devstudio.com"
-                    class="footer-contact link">info@devstudio.com</a></div>
-            <div class="footer-tel"><a href="tel:+380961111111" class="footer-contact link">+380961111111</a></div>
         </div>
     </footer>
 </body>
