--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section main-h2-none">
             <div class="container">
                 <h2 class="main-h2">Чем мы занимаемся</h2>
                 <ul class="pictures">
@@ -93,8 +93,7 @@
                     <li class="pictures-items"><img src="images/img_tablet.jpg" width="370" height="294"
                             alt="картинка планшета" /></li>
                 </ul>
-            </div>
-        </section>
+                    </section>
         <section class="section">
             <div class="container">
                 <h2 class="main-h2">Наша команда </h2>
@@ -132,7 +131,7 @@
         </section>
     </main>
     <!--Footer-->
-    <footer class="section footer">
+    <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
