--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 
 <body>
     <!--Header-->
-    <header class="section line">
+    <header class="line">
         <div class="container headr">
             <nav class="headr">
                 <div class="headr-logo"><a href="./index.html" class="logo-web link">Web<span
@@ -105,21 +105,21 @@
                             <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img7.jpg" width="370" height="284"
+                    <li class="portfolio-items nomargin-portfolio"><img src="images/img7.jpg" width="370" height="284"
                             alt="произвольная картинка 7" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Издание Limited Edition</h3>
                             <p class="main-portfolio-h3-paragraph">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img8.jpg" width="370" height="284"
+                    <li class="portfolio-items nomargin-portfolio"><img src="images/img8.jpg" width="370" height="284"
                             alt="произвольная картинка 8" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект LAB</h3>
                             <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img9.jpg" width="370" height="284"
+                    <li class="portfolio-items nomargin-portfolio"><img src="images/img9.jpg" width="370" height="284"
                             alt="произвольная картинка 9" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Growing Business</h3>
